--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -24,7 +24,7 @@
         <p>Students names have been redacted to protect student privacy.</p><br>
         <div>
             <h2 class="about">3a. Communicating with Students</h2>
-            <p class="about"></p>
+            <p class="about">Teachers convey that teaching and learning are purposeful activities; they make that purpose clear to students. They also provide clear directions for classroom activities so students know what to do; and when additional help is appropriate, teachers model these activities. When teachers present concepts and information, they make those presentations with accuracy, clarity, and imagination, using precise, academic language; where amplification is important to the lesson, skilled teachers embellish their explanations with analogies or metaphors, linking them to students’ interests and prior knowledge. Teachers occasionally withhold information from students to encourage them to think on their own, but what information they do convey is accurate and reflects deep understanding of the content. Teachers’ use of language is vivid, rich, and error free, affording the opportunity for students to hear language used well and to extend their own vocabularies. Teachers present complex concepts in ways that provide scaffolding and access to students.</p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
@@ -32,12 +32,12 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>In each of the five lesson plans I prepared during preschool lab, I wrote out specific examples of what teachers could say to encourage learning and exploration.  In addition, I wrote a script of what I would say during my gathering time.  Writing these out beforehand helped me really think about the key points of what I wanted to say.  This helped me so that in the moment of teaching, I had already planned what I wanted to talk about and didn’t get as flustered and forget what I needed to teach.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in toddler lab, the other teachers and I created a strategy sheet with specific ways we could encourage children to learn, explore, and work on the goals we set with their parents.  Writing out examples of how I could communicate with and encourage children to work on goals, helped me think intentionally about what I said to them while I was in lab.  In addition, I learned that by writing out interaction strategies for specific children I remembered their goals better and was more effective at prompting and guiding them in reaching their goals.  </p>
             </div>
 
             <div class="grid-item">
@@ -47,7 +47,10 @@
 
         <div>
             <h2 class="about">3b. Using Questioning and Discussion Techniques</h2>
-            <p class="about"></p>
+            <p class="about">It is important that questioning and discussion be used as techniques to deepen student understanding rather than serve as recitation, or a verbal “quiz.” Good teachers use divergent as well as convergent questions, framed in such a way that they invite students to formulate hypotheses, make connections, or challenge previously held views. Students’ responses to questions are valued; effective teachers are especially adept at responding to and building on student responses and making use of their ideas. High-quality questions encourage students to make connections among concepts or events previously believed to be unrelated and to arrive at new understandings of complex material. Effective teachers also pose questions for which they do not know the answers. Even when a question has a limited number of correct responses, the question, being nonformulaic, is likely to promote student thinking.
+                Class discussions are animated, engaging all students in important issues and promoting the use of precise language to deepen and extend their understanding. Furthermore, when a teacher is building on student responses to questions, students are challenged to explain their thinking and to cite specific text or other evidence to back up a position.
+                In addition, during lessons involving students in small-group work, the quality of the students’ questions and discussion in their small groups may be considered as part of this component. In order for students to formulate high-level questions, they must have learned how to do so. Therefore, high-level questions from students, either in the full class or in small-group discussions, provide evidence that these skills have been taught.
+                </p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
@@ -55,12 +58,12 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>This document is a lesson plan I wrote for my second-grade math intervention group during senior practicum.  I wrote specific questions I would ask my students to help them think through the basic facts of math and some more open-ended questions to encourage higher order thinking.  During my lesson, I used those questions to help guide a discussion and help my students think about the why and how behind what they were doing. </p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>At the beginning of my senior practicum experience, I read a book about total participation techniques (TPT’s) that help all students get involved in learning and answering questions.  I created a list of over thirty TPT’s that I could use in my classroom, with short descriptions of the procedure and a picture that I could use to show my students how a specific activity was going to be done.  For example, I could quickly see that all students had answered and which ones understood by having them hold whiteboards up with their answers written on them.  This was a quick way that I could make sure every student answered, and I could see who understood the concepts or who needed a little extra help.</p>
             </div>
 
             <div class="grid-item">
@@ -70,7 +73,7 @@
 
         <div>
             <h2 class="about">3c. Engaging Students in Learning</h2>
-            <p class="about"></p>
+            <p class="about">When students are engaged in learning, they are not merely “busy,” nor are they only “on task.” Rather, they are intellectually active in learning important and challenging content. The critical distinction between a classroom in which students are compliant and busy and one in which they are engaged is that in the latter, students are developing their understanding through what they do. That is, they are engaged in discussion, debate, answering “what if?” questions, discovering patterns, and the like. They may be selecting their work from a range of (teacher-arranged) choices, and making important contributions to the intellectual life of the class. Such activities don’t typically consume an entire lesson, but they are essential components of engagement. A lesson in which students are engaged usually has a discernible structure: a beginning, a middle, and an end, with scaffolding provided by the teacher or by the activities themselves.</p>
         </div>
         <div class="grid-container">
             <div class="grid-item images">
@@ -78,12 +81,12 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>During my preschool lab class, I planned multiple large and small group activities.  I discovered that when I offer children materials to create something, it is easier to teach them about the concepts being presented that day because the activity is hands on.  This picture is one of the instruments my preschoolers made during a small group activity where we talked about how instruments are made of different materials. </p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>During senior practicum, I learned that planning for different ability levels is a key aspect of keeping students engaged in the lessons and that having a good anticipatory set helps the students become interested right from the beginning.  In this lesson plan, I wrote several ways to differentiate for struggling and advanced learners in order to help them stay engaged and not become frustrated or bored.  In addition, when I used my anticipatory set while teaching the lesson, my students smiled, laughed, and even told me I was being silly, but they were engaged from the beginning of the lesson.  </p>
             </div>
 
             <div class="grid-item">
@@ -93,7 +96,7 @@
 
         <div>
             <h2 class="about">3d. Using Assessment in Instruction</h2>
-            <p class="about"></p>
+            <p class="about">Assessment of student learning plays an important new role in teaching: no longer signaling the end of instruction, it is now recognized to be an integral part of instruction. While assessment of learning has always been and will continue to be an important aspect of teaching (it’s important for teachers to know whether students have learned what teachers intend), assessment for learning has increasingly come to play an important role in classroom practice. And in order to assess student learning for the purposes of instruction, teachers must have a “finger on the pulse” of a lesson, monitoring student understanding and, where feedback is appropriate, offering it to students. Indeed, for the purpose of monitoring, many teachers create questions specifically to elicit the extent of student understanding and use additional techniques (such as exit tickets) to determine the degree of understanding of every student in the class. Teachers at high levels of performance in this component, then, demonstrate the ability to encourage students and actually teach them the necessary skills of monitoring their own learning against clear standards. But as important as monitoring student learning and providing feedback to students are, however, they are greatly strengthened by a teacher’s skill in making mid-course corrections when needed, seizing on a “teachable moment,” or enlisting students’ particular interests to enrich an explanation.</p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
@@ -101,12 +104,12 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>This lesson plan and pre-assessment is one I created during my preschool lab.  I first listened to and got to know the children and their interests.  Then I picked a topic based on their interests, learned what they knew about the topic, and identified misconceptions they had.  During my pre-assessment, I focused on asking open-ended questions that didn’t lead children to giving me specific answers but helped me gather more reliable data.  I learned that it can be really tempting to just ask a specific set of questions and rely on the data gathered, but it is sometimes more effective and valid to let the children guide the conversation and just listen and observe.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>During my assessments class, a partner and I created a unit about time and elapsed time for a third-grade class.  We designed a pre-assessment that, after we had given it, we realized didn’t give us as much information as we needed to truly understand what each student knew.  For our post-assessment, we gave the same test as the pre-assessment, but in addition, we created a second part that allowed us to better see what each student had learned and what misconceptions they still had.  </p>
             </div>
 
             <div class="grid-item images">
@@ -117,7 +120,7 @@
 
         <div>
             <h2 class="about">3e. Demonstrating Flexibility and Responsiveness</h2>
-            <p class="about"></p>
+            <p class="about">“Flexibility and responsiveness” refer to a teacher’s skill in making adjustments in a lesson to respond to changing conditions. When a lesson is well planned, there may be no need for changes during the course of the lesson itself. Shifting the approach in midstream is not always necessary; in fact, with experience comes skill in accurately predicting how a lesson will go and being prepared for different possible scenarios. But even the most skilled, and best prepared, teachers will occasionally find either that a lesson is not proceeding as they would like or that a teachable moment has presented itself. They are ready for such situations. Furthermore, teachers who are committed to the learning of all students persist in their attempts to engage them in learning, even when confronted with initial setbacks.</p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
@@ -125,12 +128,12 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>This document is a lesson plan I wrote for my senior practicum second-grade class.  My mentor teacher wanted me to teach the students how to collect and graph data.  While teaching, I could tell my students weren’t engaging in the lesson.  Instead of sticking to just the activities and script I planned, I had them get up and move to a specific corner of the room based on what kind of fruit they liked.  After adding this activity, my students were engaged in the rest of the lesson and eager to collect their own data. </p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While lead teaching one day, a guest whom I had invited to come speak with the children about dogs was unable to come at the last minute.  A classmate offered to have her husband bring their dog.  We did the other large group activity I had planned and transitioned the children into small groups because we had to wait for the dog to arrive.  When the dog came, I transitioned the children back into large group and successfully taught the same key idea I had planned to teach.  This is the lesson plan I wrote for that day.  Through this experience I proved that I can adapt quickly when plans fall through and still teach the key concepts.</p>
             </div>
 
             <div class="grid-item">
