--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -1,9 +1,3 @@
-<!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-<embed src="./files/recipes.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
--->
-
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -37,12 +31,12 @@
             individual and are developmentally appropriate for their age. I’m excited to design a learning environment
             where children participate in hands-on activities and are eager to participate and learn.</p>
     </main>
-    <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
-</body>
-<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
-<script src="/beccammyers.github.io/scripts/hamburger.js"></script>
-<script src="/beccammyers.github.io/scripts/w3.js"></script>
-<script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
-<script src="/beccammyers.github.io/scripts/modularize.js"></script>
+    <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
+    <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
+    <script src="/beccammyers.github.io/scripts/w3.js"></script>
+    <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
+    <script src="/beccammyers.github.io/scripts/modularize.js"></script>   <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
+.</body>
+
 
 </html>
