--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -1,9 +1,3 @@
-<!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-
--->
-
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -38,7 +32,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/DAP%20Principles%20Paper.pdf#toolbar=0"></iframe>
+                <iframe src="./files/DAP%20Principles%20Paper.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -58,10 +52,9 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%203%20Part%20One.pdf#toolbar=0" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%203%20Part%20One.pdf"
+                   ></iframe>
             </div>
-            <!--             Toddler Lesson plan #3 Spring 2018 -->
 
         </div>
         <div>
@@ -78,8 +71,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Student%20Interests.pdf#toolbar=0" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Student%20Interests.pdf"
+                   ></iframe>
             </div>
 
             <div class="grid-item">
@@ -100,8 +93,8 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%202%20Part%20Two.pdf#toolbar=0" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%202%20Part%20Two.pdf"
+                   ></iframe>
             </div>
 
         </div>
@@ -122,8 +115,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Lesson%20Plan%209%20Mixed%20Word%20Problems.pdf#toolbar=0" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%20Plan%209%20Mixed%20Word%20Problems.pdf"
+                   ></iframe>
             </div>
 
             <div class="grid-item">
@@ -144,8 +137,8 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%20Plan%201%20-%20Counting%20by%207's.pdf#toolbar=0" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <iframe src="./files/Lesson%20Plan%201%20-%20Counting%20by%207's.pdf"
+                   ></iframe>
             </div>
 
         </div>
@@ -167,7 +160,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Lesson%201%20Part%20One.pdf#toolbar=0"></iframe>
+                <iframe src="./files/Lesson%201%20Part%20One.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -188,7 +181,7 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf#toolbar=0"></iframe>
+                <iframe src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf"></iframe>
             </div>
 
         </div>
@@ -211,7 +204,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Unit%20Lesson%20Plan%201.pdf#toolbar=0"></iframe>
+                <iframe src="./files/Unit%20Lesson%20Plan%201.pdf"></iframe>
             </div>
 
             <div class="grid-item">
@@ -234,7 +227,7 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/CHILD%20230%20Lesson%20Plan.pdf#toolbar=0"></iframe>
+                <iframe src="./files/CHILD%20230%20Lesson%20Plan.pdf"></iframe>
             </div>
 
         </div>
@@ -280,17 +273,18 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Unit%20Pre-Assessment%20Report.pdf#toolbar=0"></iframe>
+                <iframe src="./files/Unit%20Pre-Assessment%20Report.pdf"></iframe>
             </div>
 
         </div>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
+    <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
+    <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
+    <script src="/beccammyers.github.io/scripts/w3.js"></script>
+    <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
+    <script src="/beccammyers.github.io/scripts/modularize.js"></script>
 </body>
-<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
-<script src="/beccammyers.github.io/scripts/hamburger.js"></script>
-<script src="/beccammyers.github.io/scripts/w3.js"></script>
-<script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
-<script src="/beccammyers.github.io/scripts/modularize.js"></script>
+
 
 </html>
