--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -18,7 +18,7 @@
     <main>
 
         <h1>Classroom Environment</h1>
-        <p>Students names have been redacted to protect student privacy.</p><br>
+        <p>Student names have been redacted to protect their privacy.</p><br>
         <div>
             <h2 class="about">2a. Creating an Environment of Respect and Rapport</h2>
             <p class="about"> An essential skill of teaching is that of managing relationships with students and
