--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -18,7 +18,7 @@
     <main>
 
         <h1>Health and Safety</h1>
-        <p>Students names have been redacted to protect student privacy.</p><br>
+        <p>Student names have been redacted to protect their privacy.</p><br>
 
         <div>
             <h2 class="about">5a. Accesses, Uses, and Maintains Health and Safety Records</h2>
