--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -17,12 +17,12 @@
     <nav w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html"></nav>
     <main>
         <div id="me">
-            <img src="/beccammyers.github.io/images/becca.JPG"
-                srcset="/beccammyers.github.io/images/becca-s.jpg 300w, /beccammyers.github.io/images/becca-m.jpg 600w, /beccammyers.github.io/images/becca.jpg 1000w"
+            <img src="/beccammyers.github.io/images/Engagement%20Picture.jpg"
+                srcset="/beccammyers.github.io/images/Engagement%20Picture.jpg 300w, /beccammyers.github.io/images/Engagement%20Picture.jpg 600w, /beccammyers.github.io/images/Engagement%20Picture.jpg 1000w"
                 alt="Becca">
         </div>
-        <h2 class="about">About Me</h2>
-        <p class="about">My name is Rebecca Myers, and I am currently a student at Brigham Young University-Idaho
+        <h2 class="about">Rebecca Myers</h2>
+        <p class="about">I am currently a student at Brigham Young University-Idaho
             studying Early Childhood/Special Education. I have had a passion for working with young children since I
             started babysitting as a young teenager and as I taught swimming lessons. The joy that comes from working
             with young children followed me through to my first time teaching in a first-grade elementary class. As I’ve
