--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -18,7 +18,7 @@
     <main>
 
         <h1>Instruction</h1>
-        <p>Students names have been redacted to protect student privacy.</p><br>
+        <p>Student names have been redacted to protect their privacy.</p><br>
         <div>
             <h2 class="about">3a. Communicating with Students</h2>
             <p class="about">Teachers convey that teaching and learning are purposeful activities; they make that purpose clear to students. They also provide clear directions for classroom activities so students know what to do; and when additional help is appropriate, teachers model these activities. When teachers present concepts and information, they make those presentations with accuracy, clarity, and imagination, using precise, academic language; where amplification is important to the lesson, skilled teachers embellish their explanations with analogies or metaphors, linking them to students’ interests and prior knowledge. Teachers occasionally withhold information from students to encourage them to think on their own, but what information they do convey is accurate and reflects deep understanding of the content. Teachers’ use of language is vivid, rich, and error free, affording the opportunity for students to hear language used well and to extend their own vocabularies. Teachers present complex concepts in ways that provide scaffolding and access to students.</p>
