--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -18,7 +18,7 @@
     <main>
 
         <h1>Planning and Preparation</h1>
-        <p>Students names have been redacted to protect student privacy.</p><br>
+        <p>Student names have been redacted to protect their privacy.</p><br>
         <div>
             <h2 class="about">1a. Demonstrating Knowledge of Content and Pedagogy</h2>
             <p class="about">In order to guide student learning, teachers must have command of the subjects they teach.
