--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -18,7 +18,7 @@
     <main>
 
         <h1>Professional Responsibilities</h1>
-        <p>Students names have been redacted to protect student privacy.</p><br>
+        <p>Student names have been redacted to protect their privacy.</p><br>
         <div>
             <h2 class="about">4a. Reflecting on Teaching</h2>
             <p class="about">Reflecting on teaching encompasses the teacher’s thinking that follows any instructional
