--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -21,7 +21,7 @@
                 srcset="/beccammyers.github.io/images/Engagement%20Picture.jpg 300w, /beccammyers.github.io/images/Engagement%20Picture.jpg 600w, /beccammyers.github.io/images/Engagement%20Picture.jpg 1000w"
                 alt="Becca">
         </div>
-        <h2 class="about">Rebecca Myers</h2>
+        <h2 class="about">Rebecca Maisey Myers</h2>
         <p class="about">I am currently a student at Brigham Young University-Idaho
             studying Early Childhood/Special Education. I have had a passion for working with young children since I
             started babysitting as a young teenager and as I taught swimming lessons. The joy that comes from working
