--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -44,9 +44,8 @@
                     reflect upon my teaching skills and how my lessons went. At first, I viewed this as just busy work,
                     but over the last year, I’ve learned that actually writing out a reflection is a powerful tool. I’ve
                     learned to think more deeply about different aspects of my lessons and make meaningful goals that I
-                    could work on over the next couple of weeks. These have helped me become a better teacher because
-                    These goals helped me know how I was teaching every day, and by making effective adjustments to help
-                    my students learn, I have become a better teacher.</p>
+                    could work on over the next couple of weeks. These goals helped me know how I was teaching every day,
+                     and by making effective adjustments to help my students learn, I have become a better teacher.</p>
             </div>
 
 
@@ -206,7 +205,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                <img src="./images/Make%20It%20Matter%20Badge.jpg" alt="Make It Matter Badge">
+                <img src="./images/Make%20It%20Matter%20Badge.jpg" alt="Make It Matter Badge"style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
 
             <div class="grid-item">
