--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -98,6 +98,7 @@
         <div class="grid-container">
             <div class="grid-item">
                 <iframe src="./files/Resource%20Plan.pdf"></iframe>
+                <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -233,7 +234,7 @@
                 <img src="./images/Black%20Cloth.jpg" alt="Black Cloth">
             </div>
         </div>
-
+        <p><a href="https://www.danielsongroup.org/framework">Danielson Domain Definitions Reference</a></p>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
     <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
