--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -26,6 +26,7 @@
         <div class="grid-container">
             <div class="grid-item">
                     <iframe src="./files/Preschool%20Lesson%20Plan%2011.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -39,6 +40,7 @@
 
             <div class="grid-item">
                     <iframe src="./files/Toddler%20Strategy%20Sheet.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
         </div>
 
@@ -98,6 +100,7 @@
         <div class="grid-container">
             <div class="grid-item">
                     <iframe src="./files/Preschool%20Lesson%20Pre-Assessment.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -135,9 +138,10 @@
 
             <div class="grid-item">
                     <iframe src="./files/Preschool%20Dogs%20Large%20Group.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
         </div>
-
+        <p><a href="https://www.danielsongroup.org/framework">Danielson Domain Definitions Reference</a></p>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
     <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
