--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -52,8 +52,8 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%203%20Part%20One.pdf"
-                   ></iframe>
+                <iframe src="./files/Lesson%203%20Part%20One.pdf"></iframe>
+                <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
         </div>
@@ -71,8 +71,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <iframe src="./files/Student%20Interests.pdf"
-                   ></iframe>
+                <iframe src="./files/Student%20Interests.pdf"></iframe>
+                <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -93,8 +93,8 @@
             </div>
 
             <div class="grid-item">
-                <iframe src="./files/Lesson%202%20Part%20Two.pdf"
-                   ></iframe>
+                <iframe src="./files/Lesson%202%20Part%20Two.pdf"></iframe>
+                <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
         </div>
@@ -161,6 +161,7 @@
         <div class="grid-container">
             <div class="grid-item">
                 <iframe src="./files/Lesson%201%20Part%20One.pdf"></iframe>
+                <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -277,6 +278,7 @@
             </div>
 
         </div>
+        <p><a href="https://www.danielsongroup.org/framework">Danielson Domain Definitions Reference</a></p>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
     <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
