--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -101,6 +101,7 @@
 
             <div class="grid-item">
                     <iframe src="./files/Toddler%20Notes%20Week%207.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
         </div>
 
@@ -186,6 +187,7 @@
 
             <div class="grid-item">
                     <iframe src="./files/Final%20Positive%20Comments.pdf"></iframe>
+                    <span class="description">Names have been redacted to protect their privacy.</span>
             </div>
         </div>
 
@@ -274,7 +276,7 @@
                     <iframe src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf"></iframe>
             </div>
         </div>
-
+        <p><a href="https://www.danielsongroup.org/framework">Danielson Domain Definitions Reference</a></p>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
     <script src="/beccammyers.github.io/scripts/currentdate.js"></script>
