--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -80,6 +80,7 @@
         <div class="grid-container">
             <div class="grid-item">
                     <iframe src="./files/Preschool%20Lesson%20Plan%2017.pdf"></iframe>
+                    <span class="description">Student names have been redacted to protect their privacy.</span>
             </div>
 
             <div class="grid-item">
@@ -216,6 +217,7 @@
                     <iframe src="./files/Environment%20Observation%20Form%20One%20Fill-in.pdf"></iframe>
             </div>
         </div>
+        <p><a href="https://www.danielsongroup.org/framework">Danielson Domain Definitions Reference</a></p>
 
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
