--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -18,7 +18,7 @@
     <main>
         <div id="me">
             <img src="/beccammyers.github.io/images/Engagement%20Picture.jpg"
-                srcset="/beccammyers.github.io/images/Engagement%20Picture.jpg 300w, /beccammyers.github.io/images/Engagement%20Picture.jpg 600w, /beccammyers.github.io/images/Engagement%20Picture.jpg 1000w"
+                srcset="/beccammyers.github.io/images/Engagement%20Picture-s.jpg 300w, /beccammyers.github.io/images/Engagement%20Picture.jpg 600w"
                 alt="Becca">
         </div>
         <h2 class="about">Rebecca Maisey Myers</h2>
